--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -104,10 +104,10 @@ body {
 	width: 75%;
 	max-width: 850px;
 	margin: 4rem auto;
-	background: $white;
+	background: $color_grey;
 	color: $color_tuatara;
 	padding: 2em;
-	border-radius: 3px;
+	border-radius: 15px;
 	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
 	@include transition(.5s);
 	@media #{$small} {
