--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -49,6 +49,7 @@ h3.title a {
 		margin: 0 10px;
 		text-decoration: none;
 		background: $white;
+		border-radius: 7px;
 		color: $color_shark;
 		a {
 			@include font-rem(20);
