--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -2,6 +2,7 @@
 $bodycolor           : #D24D57;
 $black           	 : #000;
 $white               : #fff;
+$color_grey          : #ccc;
 $color_gray          : #e8e8e8;
 $red                 : #FF4136;
 $maroon              : #85144b;
