--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -93,13 +93,15 @@ a {
   transition: color .4s;
   color: $color_shark;
   &:link {
-  	color: $color_shark;
+  	color: $info;
+  	text-decoration: none;
   }
   &:visited {
   	color: $color_tuatara;
   }
   &:hover {
   	color: $red;
+  	text-decoration: underline;
   }
   &:active {
   	transition: color .3s;
