--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -75,10 +75,10 @@ body {
 	padding-right: 15px;
 	padding-left: 15px;
 	@include center-block();
-	background-color: $white;
+	background: rgba(255,255,255,0.5);
 	color: $color_shark;
 	z-index: 1;
-	border-radius: 3px;
+	border-radius: 25px;
 	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
 	@include transition(.5s);
 	@media #{$small} {
@@ -104,7 +104,7 @@ body {
 	width: 75%;
 	max-width: 850px;
 	margin: 4rem auto;
-	background: $color_grey;
+	background: rgba(255,255,255,0.6);
 	color: $color_tuatara;
 	padding: 2em;
 	border-radius: 15px;
