--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -30,6 +30,7 @@ $info		         : #308cbc;
 //fonts
 $font1               : Fira Sans,sans-serif;
 $font2               : Inconsolata;
+$font3               : SFMono-Regular,Consolas,"Liberation Mono",Menlo,Courier,monospace;
 $alt-font            : serif;
 $doc-font-size       : 16;
 $doc-line-height     : 26;
