--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -71,7 +71,7 @@ h3.title a {
 blockquote {
 	font-family:$alt-font;
 	font-style:italic;
-	border-left:8px solid $color_tundora;
+	border-left:8px solid #00FFF0;
 	padding-left:20px;
 	margin: 0;
 }
