--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,18 +1,15 @@
-{% if site.disqus_shortname %}
-<div id="lv-container" data-id="city" data-uid="MTAyMC80MDkzNC8xNzQ1OQ==">
-<script type="text/javascript">
-   (function(d, s) {
-       var j, e = d.getElementsByTagName(s)[0];
-
-       if (typeof LivereTower === 'function') { return; }
-
-       j = d.createElement(s);
-       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-       j.async = true;
-
-       e.parentNode.insertBefore(j, e);
-   })(document, 'script');
-</script>
-<noscript>为正常使用来必力评论功能请激活JavaScript</noscript>
-</div>
+{% if page.comments and site.disqus_shortname %}
+  <script type="text/javascript">
+    window.livereOptions = {
+      refer: '{{ page.path }}'
+    };
+    (function(d, s) {
+      var j, e = d.getElementsByTagName(s)[0];
+      if (typeof LivereTower === 'function') { return; }
+      j = d.createElement(s);
+      j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+      j.async = true;
+      e.parentNode.insertBefore(j, e);
+    })(document, 'script');
+  </script>
 {% endif %}
