Set Comments system

--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -10,7 +10,7 @@
       e.parentNode.insertBefore(j, e);
     })(document, 'script');
     (function(d, s) {
-      var i, ele = d.getElementsByTagName(s)[0];
+      var i, ele = d.getElementById('disqus_thread');
       i = d.createElement(s);
       i.setAttribute('id','lv-container');
       i.setAttribute('data-id','city');
