Modify Comments system

--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -15,7 +15,7 @@
       i.setAttribute('id','lv-container');
       i.setAttribute('data-id','city');
       i.setAttribute('data-uid',disqus_shortname);
-      ele.parentNode.appendChild(i);
+      ele.appendChild(i);
     })(document, 'div');
   </script>
 {% endif %}
