--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -71,13 +71,13 @@ h3.title a {
 blockquote {
 	font-family:$alt-font;
 	font-style:italic;
-	border-left:8px solid #00FFF0;
-	padding-left:20px;
+	border-left:5px solid #00FFF0;
+	padding-left:1px;
 	margin: 0;
 }
 @media only screen and (min-width: 48em) {
 	blockquote {
-		margin-left:-28px
+		margin-left:0;
 	}
 }
 
